syntax = "proto3";

// Require Go Package
option go_package = "/models";

// Error Message returned from Core Library
message ErrorMessage {
  Type type = 1;         // Error Type Occurred
  Severity severity = 2; // 1-4 Scale of Error
  string message = 3;    // Client Error Message
  string data = 4;       // Any Attached Error Data
  string error = 5;      // Received Error

  // Error Type from Enum
  enum Type {
    // General
    MARSHAL = 0;
    UNMARSHAL = 1;
    IP_RESOLVE = 2;
    IP_LOCATE = 3;
    BOOTSTRAP = 4;
    DEVICE_ID = 60;

    // Topic
    TOPIC_JOIN = 5;
    TOPIC_CREATE = 6;
    TOPIC_INVALID = 7;
    TOPIC_RPC = 8;
    TOPIC_SUB = 9;
    TOPIC_HANDLER = 10;
    TOPIC_LEAVE = 11;
    TOPIC_MESSAGE = 12;
    TOPIC_UPDATE = 13;

    // User
    USER_CREATE = 17;
    USER_SAVE = 18;
    USER_LOAD = 19;
    USER_FS = 20;
    USER_UPDATE = 21;

    // Transfer
    TRANSFER_START = 14;
    TRANSFER_CHUNK = 15;
    TRANSFER_END = 16;
    INCOMING = 22;
    OUTGOING = 23;
    SESSION = 24;

    // Host
    HOST_DHT = 25;
    HOST_KEY = 26;
    HOST_STREAM = 27;
    HOST_START = 28;
    HOST_PUBSUB = 29;
    HOST_INFO = 37;
    HOST_MDNS = 57;
    CRYPTO_GEN = 30;

    // Peer
    PEER_NOT_FOUND_INVITE = 31;
    PEER_NOT_FOUND_REPLY = 32;
    PEER_NOT_FOUND_TRANSFER = 33;
    PEER_PUBKEY_DECODE = 58;
    PEER_PUBKEY_UNMARSHAL = 59;
    URL_HTTP_GET = 34;
    URL_INFO_RESP = 35;
    FAILED_CONNECTION = 36;

    // Key Pair
    KEY_SET = 38;
    KEY_INVALID = 39;
    KEY_ID = 40;

    // Memory Store
    STORE_PUT = 41;
    STORE_GET = 42;
    STORE_FIND = 43;
    STORE_INIT = 44;

    // Textile Client
    TEXTILE_START_CLIENT = 45;
    TEXTILE_USER_CTX = 46;
    TEXTILE_TOKEN_CTX = 47;

    // Threads Service
    THREADS_START_NEW = 48;
    THREADS_START_EXISTING = 49;
    THREADS_LIST_ALL = 50;

    // Mailbox Service
    MAILBOX_START_NEW = 51;
    MAILBOX_START_EXISTING = 52;
    MAILBOX_LIST_ALL = 53;
    MAILBOX_MESSAGE_OPEN = 54;
    MAILBOX_MESSAGE_SEND = 55;
    MAILBOX_MESSAGE_PEER_PUBKEY = 56;
    MAILBOX_EVENT_STATE = 61;
  }

  enum Severity {
    LOG = 0;
    WARNING = 1;
    CRITICAL = 2;
    FATAL = 3;
  }
}
